--- a/Restaurante/web/css/style.css
+++ b/Restaurante/web/css/style.css
@@ -34,6 +34,12 @@ body section article:nth-child(1) hgroup{
 
 body section article:nth-child(2){
     height: 10%;
+    
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: center;
+    align-items: center;
 }
 
 body section article:nth-child(2) ul{
@@ -52,11 +58,10 @@ body section article:nth-child(2) ul{
 body section article:nth-child(2) ul li{
     margin: 0;
     padding: 0;
-    width: 30%;
-    height: 80%;
+    width: 15%;
+    height: 50%;
     border-radius: 10px;
-    border: 2px solid #aaa;
-    background-color: rgba(200,200,200,0.8);
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2), 0 0 5px rgba(0, 0, 0, 0.2);
     
     display: flex;
     flex-direction: column;
@@ -72,6 +77,12 @@ body section article ul li:hover{
 body section article:nth-child(3){
     position: relative;
     height: 47.5%;
+    
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    justify-content: flex-start;
+    align-items: center;
 }
 
 body section article:nth-child(3) h1{
@@ -82,14 +93,14 @@ body section article:nth-child(3) h1{
     
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
 }
 
 body section article:nth-child(3) figure{
-    width: 100%;
-    height: 75%;
+    width: 70%;
+    height: 50%;
     
     display: flex;
     flex-direction: row;
@@ -98,8 +109,10 @@ body section article:nth-child(3) figure{
 }
 
 body section article:nth-child(3) figure div{
-    width: 30%;
-    height: 80%;
+    width: 25%;
+    height: 100%;
+    border-radius: 10px;
+    box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.2), 0 0 5px rgba(0, 0, 0, 0.2);
     
     display: flex;
     flex-direction: column;
@@ -108,11 +121,16 @@ body section article:nth-child(3) figure div{
     align-items: center;
 }
 
+body section article:nth-child(3) figure div:hover{
+    box-shadow: 4px 8px 25px rgba(0, 0, 0, 0.2), 0 0 20px rgba(0, 0, 0, 0.2);
+    transition-duration: 0.5s;
+}
+
 body section article:nth-child(3) figure div img{
     width: 60%;
-    height: 70%;
+    height: 47%;
 }
 
 body section article:nth-child(3) figure div figcaption{
-
+    text-align: center;
 }
