Início do login com Instagram.

--- a/Restaurante/web/css/signin_style.css
+++ b/Restaurante/web/css/signin_style.css
@@ -5,7 +5,7 @@ main{
     top: 7.5%;
     
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
 }
